# IRIS-App-Starter-Project

./: .env.example  .gitignore  LICENSE  README.md  example.env  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mts  vite.config.ts
IRIS-Electron-Starter/: index.html  package-lock.json  package.json
IRIS-Electron-Starter/src/: App.vue  pose.ts  three-shims.d.ts
electron/: iris-mock.js  iris.js  main.js  mockExtrinsics.js  preload.js
electron/iris/: calibrationManager.js  config.js  index.js  monitorManager.js  pipeServer.js  processManager.js  utils.js  videoStreamer.js
electron/marker-augmenter/: augmenter.js
electron/opensim/: opensimManager.js
public/assets/: Flair.fbx  Idle.fbx  mockExtrinsics.json
recapture-lib/: README.md  graph_schema.json  main.py  pixi.toml  pyproject.toml
recapture-lib/src/: __init__.py  main.py
src/: App.css  App.vue  env.d.ts  main.ts  style.css  three-minimal.d.ts
src/Stores/: connectorStore.ts  irisStore.ts
src/assets/: mockExtrinsics.json
src/components/: ConsoleModal.vue  FeedViewPage.vue  HudControls.vue  Navbar.vue  ProjectHome.vue  analysisWindow.vue  connectVR.vue  settingsModal.vue  sidebar.vue  threeWindow.vue
src/components/app/: AppTopBar.vue  (+6 more)
src/composables/: useCameras.ts  useIris.ts  usePlaySpace.ts  useSceneCameras.ts
src/lib/: useIris.ts  useLicense.ts  usePlaySpace.ts  useProject.ts  useProjectPresets.ts  useSceneCameras.ts
src/stores/: useCameraStore.ts  useFilesystemStore.ts  useIrisStore.ts  useUIStore.ts
src/temp/: analysisDefaults.d.ts  analysisDefaults.js
(+4 files in other folders)
