[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recapture"
version = "0.1.0"
description = "This recapture plugin library allows you to create python scripts to process raw motion capture data and produce biomechanical analysis."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = [opensim>=4.5.2, ]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/yourname/my-package"